# benchmark

./: .gitignore  Dockerfile  LICENSE  README.md
benchmarking/: CMakeLists.txt  custom_problem.cpp  main.cpp  se3.hpp  testing.hpp  tests.hpp
benchmarking/wrappers/: adept.hpp  adolc.hpp  autodiff_dual.hpp  autodiff_real.hpp  autodiff_var.hpp  ceres.hpp  common.hpp  cppad.hpp  cppadcg.hpp  numerical.hpp  sacado.hpp
plotting/: data  requirements.txt  visualization.ipynb
tools/: CMakeLists.txt
tools/patches/: adept_sfinae.patch
